--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <nav class="contacts">
     <ul class="contacts-list">
         <li class="btn">
-            <a href="/sobre.html"><i class="fa-solid fa-dice-d20"></i> Sobre</a>
+            <a href="./sobre.html"><i class="fa-solid fa-dice-d20"></i> Sobre</a>
 
         <li class="btn">
             <a href="https://www.linkedin.com/in/luiz-miguel-cavilha-61a311242/" target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin </a></li>
