--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <header class="header">
     <div class="header-container">
   <img src="./src/Images/Foto-de-Perfil.jpg" alt="Uma foto minha">
-  <h1>Bem vindo(a) meu novo Site de potifólio</h1>
-  <p>Aqui você vai encontrar varios trabalhos meus, geralmente completos, mas sempre aceitando sugestões, bem vindo e qualquer dúvida, meus contatos estão no topo da página.</p>
+  <h1>Bem vindo(a) ao meu Site de potifólio</h1>
+  <p>Aqui você vai encontrar vários trabalhos meus, geralmente completos, mas sempre aceitando sugestões, qualquer dúvida, meus contatos estão no topo da página.</p>
   <p class="paradox">(Não preciso dizer que o site de portifólio já faz parte do portifílio não é mesmo? Ou seja, você está em um paradoxo)</p>
   </div>
   
@@ -77,7 +77,7 @@
     
     <div class="content">
     <p>Este é meu antigo site de portifólio (ou V1, como gosto de chamar), inteiramente desenvolvido por mim, algumas sessões ainda faltam certo polimento, mas resolvi começar a Versão 2
-    do zero, e manter este ativo para exemplo e parametro de desenvolvimento.<br>
+    do zero, e manter este ativo para exemplo e parâmetro de desenvolvimento.<br>
     Link da página: <a href="https://miguelcavilha.github.io/Site-Portifolio/" target="_blank">Meu Site pessoal V1 (miguelcavilha.github.io)</a><br>
     Link do repositório: <a href="https://github.com/MiguelCavilha/Site-Portifolio" target="_blank">MiguelCavilha/Site-Portifolio (github.com)</a></p>
     <img src="./src/Images/Portifólio-v1.jpg" alt="Portifólio V1"></div>
