--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-    <title>Potifólio V2</title>
+    <title>Portifólio V2</title>
 </head>
 <body>
 
   <header class="header">
     <div class="header-container">
   <img src="./src/Images/Foto-de-Perfil.jpg" alt="Uma foto minha">
-  <h1>Bem vindo(a) ao meu Site de potifólio</h1>
+  <h1>Bem vindo(a) ao meu Site de portifólio</h1>
   <p>Aqui você vai encontrar vários trabalhos meus, geralmente completos, mas sempre aceitando sugestões, qualquer dúvida, meus contatos estão no topo da página.</p>
   <p class="paradox">(Não preciso dizer que o site de portifólio já faz parte do portifílio não é mesmo? Ou seja, você está em um paradoxo)</p>
   </div>
